CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
SET(CMAKE_CXX_COMPILER_FLAGS "-Wall -Wextra -std=c++11")
PROJECT(sidewinderd)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(Config++ REQUIRED)
FIND_PACKAGE(UDev REQUIRED)
