CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
ADD_DEFINITIONS(-Wall -Wextra -std=c++11)
PROJECT(sidewinderd)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(Config++ REQUIRED)
FIND_PACKAGE(UDev REQUIRED)
