INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/lib/tinyxml2")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/lib/tinyxml2")

AUX_SOURCE_DIRECTORY(. SOURCE_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_LIST} "${PROJECT_SOURCE_DIR}/etc/sidewinderd.conf" "${PROJECT_SOURCE_DIR}/etc/sidewinderd.service")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} tinyxml2 udev config++)

SET(CMAKE_INSTALL_PREFIX "/usr")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(FILES "${PROJECT_SOURCE_DIR}/etc/sidewinderd.conf" DESTINATION /etc COMPONENT config)
INSTALL(FILES "${PROJECT_SOURCE_DIR}/etc/sidewinderd.service" DESTINATION lib/systemd/system)
